# DPM-V2

./: .gitignore  MIGRATION_GUIDE.md  README.md  dir.txt  tree.txt
.claude/: settings.local.json  settings.local.json.backup.20251028_001053
WindowsTools/: DIAGNOSTIC_TOOL_PLAN.md  ENHANCEMENTS.md  PROGRESS_AND_TODO.md  README.md  TESTING_CHECKLIST.md  TEST_SUMMARY.md  config.json  main.py  requirements.txt  version.py
WindowsTools/docs/: SESSION_2025-10-30_UDP_FIX.md
WindowsTools/gui/: __init__.py  main_window.py  tab_activity.py  tab_camera.py  tab_command.py  tab_config.py  tab_connection.py  tab_h16_diagnostics.py  tab_logs.py  tab_protocol.py  tab_remote_control.py  tab_system.py  widgets.py
WindowsTools/gui/log_subtabs/: __init__.py  active_clients.py  camera_comparison.py  camera_events.py
WindowsTools/network/: __init__.py  heartbeat.py  protocol.py  ssh_client.py  tcp_client.py  udp_listener.py
WindowsTools/utils/: __init__.py  config.py  log_parser.py  logger.py  protocol_loader.py
android/: MONITORING_GUIDE.md  build-log-detailed.txt  build-log.txt  local.properties  monitor_commands_only.bat  monitor_connection.bat  monitor_detailed.bat  settings.gradle.kts
android/.claude/: settings.local.json
android/app/: build.gradle.kts
android/app/src/androidTest/java/uk/unmannedsystems/dpm_android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/uk/unmannedsystems/dpm_android/: DPMApplication.kt  MainActivity.kt
android/app/src/main/java/uk/unmannedsystems/dpm_android/camera/: CameraControlScreen.kt  CameraState.kt  CameraViewModel.kt  FocusDistanceOverlay.kt  PropertyLoader.kt  SonyCameraOverlay.kt  SonyRemoteControlScreen.kt
android/app/src/main/java/uk/unmannedsystems/dpm_android/eventlog/: EventLogScreen.kt  EventLogViewModel.kt
android/app/src/main/java/uk/unmannedsystems/dpm_android/network/: NetworkClient.kt  NetworkManager.kt  NetworkSettings.kt  ProtocolMessages.kt
android/app/src/main/java/uk/unmannedsystems/dpm_android/settings/: SettingsManager.kt  SettingsRepository.kt  SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/uk/unmannedsystems/dpm_android/: ExampleUnitTest.kt
android/docs/: ANDROID_ARCHITECTURE.md  Architecture guide.md  CC_READ_THIS_FIRST.md  PROGRESS_AND_TODO.MD  PROGRESS_AND_TODO.md  RTSP Video Stream.MD
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
docker_setup/: build_container.sh  run_container.sh  setup_docker_env.sh  setup_docker_env_monorepo.sh
docs/: Air_Side_Implementation_Guide.md  Architecture_Comparison_H16.md  CAMERA_PROPERTIES_FIX_TRACKING.md  CC_AirSide_Architecture_Documentation_Instructions.md  CC_Air_Side_Implementation_Instructions.md  CC_Android_Architecture_Documentation_Instructions.md  CC_READ_THIS_FIRST.md  Cheat_Sheet_ADB_H16.md  Cheat_Sheet_ADB_LOG_ANALYSIS.md  Cheat_Sheet_Git_DPM.md  Claude-Code-progress.MD  Command_Protocol_Specification_v1.0.md  Connectivity_Test_Strategy.md  Connectivity_Test_Strategy_v1.1.md  Drone_Payload_Manager_Phase1_Scope.md  FOCUS_CONTROL_DEBUG_ISSUE.md  FOCUS_FIX_INSTRUCTIONS.md  FOCUS_FIX_SUMMARY.md  Focus_Control_Implementation_Guide.md  Focus_Implementation_Summary.md  Ground_Side_Focus_Implementation_Guide.md  IMPLEMENTATION_STATUS.md  ISO_AUTO_FIX_SUMMARY.md  ISO_AUTO_INVESTIGATION.md  LOG_ANALYSIS_GUIDE.md  Log monitor-Air-Side.md  NETWORK_DEPLOYMENT_GUIDE.md  Phase1_Quick_Reference.md  Phase1_Requirements_Update.md  Phase1_Technical_Addendum_Sony_SDK.md  Project_Documentation_Summary.md  Project_Summary_and_Action_Plan.md  Protocol_Implementation_Quick_Start.md  TEMP_Property_Mapping_Process.md  Updated_System_Architecture_H16.md
docs/protocol/: CAMERA_SHUTTER_SPEEDS.md  CAMERA_STATUS_SYNCHRONIZATION.md  MASTER_INDEX.md  OPTION_B_DOCUMENTATION_PACKAGE.md  PROTOCOL_VALUE_MAPPING.md  PROTOCOL_VALUE_MAPPING_QUICK_REF.md  README.md  README_protocol.md  WORKFLOW.md  camera_properties.json  commands.json  protocol_v1.0.json
protocol/: camera_properties.json  commands.json  heartbeat_spec.json  protocol_v1.0.json
sbc/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.prod  README.md  build_container.sh  monitor_camera_testing.sh  rebuild.sh  run_container.sh  run_diagnostic.sh  shell.sh  test_camera.sh
sbc/docs/: Architecture guide.md  BUILD_AND_IMPLEMENTATION_PLAN.md  CAMERA_PROPERTY_REFRESH_FIX.md  CC_QUICK_REFERENCE.md  CC_READ_THIS_FIRST.md  CC_READ_THIS_FIRST.old  CLAUDE_MEMORY.md  DEPLOY_NEW_DOCS.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  Docker Solution Briefing for Claude Code.MD  GIT_WORKFLOW.md  GROUND_SIDE_VALUE_FORMAT.md  PROGRESS_AND_TODO.md  PROGRESS_UPDATE_TEMPLATE.md  SBC_ARCHITECTURE.md  SHUTTER_SPEED_CALCULATIONS.md  SITUATION.MD  USB bulk.MD  WHATS_NEW.md  WIFI_TESTING.md  Wifi testing-workaround.md
sbc/remotecli-diagnostic/: .gitignore  Dockerfile  QUICK_START.md  README.md  SUMMARY.md  build_remotecli.sh  run_remotecli.sh
sbc/remotecli-diagnostic/remotecli_v2/: CMakeLists.txt
sbc/remotecli-diagnostic/remotecli_v2/src/: CameraDevice.cpp  DiagnosticLogger.h  RemoteCli.cpp  RemoteCli_v2.cpp
sbc/scripts/: discover_iso_map.py  discover_shutter_map.py  find_h16.sh  iso_map_20251027_204316.txt  shutter_map_20251027_141234.txt  test_tcp_server.py
sbc/src/: config.h  discover_shutter_speeds.cpp  main.cpp  test_camera.cpp  test_integration.cpp  test_iso_query.cpp  test_property_mapping.cpp  test_shutter.cpp
sbc/src/camera/: camera_interface.h  camera_sony.cpp  camera_sony.h  camera_sony_diagnostic.cpp  camera_sony_fixed.cpp  camera_stub.cpp  property_loader.cpp  property_loader.h
sbc/src/diagnostics/: diagnostics.cpp  diagnostics.h
sbc/src/protocol/: heartbeat.cpp  heartbeat.h  messages.h  tcp_server.cpp  tcp_server.h  udp_broadcaster.cpp  udp_broadcaster.h
sbc/src/utils/: logger.cpp  logger.h  system_info.cpp  system_info.h
tools/: android-settings.local.json  install-claude-settings.sh  root-settings.local.json  sbc-settings.local.json
(+9 files in other folders)
